--- a/basetools/src/main/res/values/strings.xml
+++ b/basetools/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BaseTools</string>
+
+    <string name="permission_describe">"为了应用可以正常使用，请您点击确认申请权限。"</string>
+    <string name="positive">允许</string>
+    <string name="negative">取消</string>
+    <string name="title">提示</string>
 </resources>
